--- a/index.html
+++ b/index.html
@@ -120,17 +120,36 @@
     </section>
 
     <section id="gallery" aria-label="artwork gallery" class="grid">
-      <article class="card">
-        <img class="thumb" loading="lazy" src="https://raw.githubusercontent.com/placeholder/placeholder/main/600x600.png" alt="SeedSigner corn screen, pixel style" />
-        <div class="meta">
-          <h3 class="title">SeedSigner — 🌽 Corn Screen</h3>
-          <p class="desc">시드사이너 화면에 옥수수 아이콘이 깜빡이는 버전. ‘CORN’ 단체에서 착안.</p>
-          <div class="row">
-            <span class="tiny"><span class="dot"></span>2025-10-24</span>
-            <a class="tiny inline" href="https://github.com/gxrxxxng/dalbit.me/commits/main" target="_blank" rel="noopener">Proof</a>
-          </div>
-        </div>
-      </article>
+<!-- 카드 1: SeedSigner Corn Screen -->
+<article class="card">
+  <a href="https://x.com/gxrxxxng/status/1981310401754386533?s=46" 
+     target="_blank" rel="noopener" 
+     aria-label="SeedSigner Corn Screen — X에서 보기" 
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/corn-thumb.png" 
+         alt="SeedSigner corn screen, pixel style (X에서 보기)" />
+    <!-- 오른쪽 아래 배지 -->
+    <span style="position:absolute; right:10px; bottom:10px; 
+                 background:rgba(0,0,0,.55); color:#fff; 
+                 font-size:12px; padding:4px 8px; border-radius:999px; 
+                 border:1px solid rgba(255,255,255,.2);">
+      ▶ Watch on X
+    </span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">SeedSigner — 🌽 Corn Screen</h3>
+    <p class="desc">시드사이너 화면에 옥수수 아이콘이 깜빡이는 버전. ‘CORN’ 단체에서 착안.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-24</span>
+      <a class="tiny inline" 
+         href="https://github.com/gxrxxxng/dalbit.me/commits/main" 
+         target="_blank" rel="noopener">Proof</a>
+    </div>
+  </div>
+</article>
+
+
 
       <article class="card">
         <img class="thumb" loading="lazy" src="https://raw.githubusercontent.com/placeholder/placeholder/main/600x600.png" alt="Bitaxe pixel art" />
