--- a/index.html
+++ b/index.html
@@ -122,16 +122,17 @@
     <section id="gallery" aria-label="artwork gallery" class="grid">
 <!-- 카드 1: SeedSigner Corn Screen -->
 <article class="card">
-  <a href="https://x.com/gxrxxxng/status/1981310401754386533?s=46" 
-     target="_blank" rel="noopener" 
-     aria-label="SeedSigner Corn Screen — X에서 보기" 
+  <a href="https://x.com/gxrxxxng/status/1981310401754386533?s=46"
+     target="_blank" rel="noopener"
+     aria-label="SeedSigner Corn Screen — X에서 보기"
      style="position:relative; display:block;">
-    <img class="thumb" src="assets/images/corn-thumb.png" 
+    <img class="thumb"
+         src="https://pbs.twimg.com/tweet_video_thumb/GhTHj3qa4AA9tDJ.jpg"
          alt="SeedSigner corn screen, pixel style (X에서 보기)" />
     <!-- 오른쪽 아래 배지 -->
-    <span style="position:absolute; right:10px; bottom:10px; 
-                 background:rgba(0,0,0,.55); color:#fff; 
-                 font-size:12px; padding:4px 8px; border-radius:999px; 
+    <span style="position:absolute; right:10px; bottom:10px;
+                 background:rgba(0,0,0,.55); color:#fff;
+                 font-size:12px; padding:4px 8px; border-radius:999px;
                  border:1px solid rgba(255,255,255,.2);">
       ▶ Watch on X
     </span>
@@ -139,15 +140,16 @@
 
   <div class="meta">
     <h3 class="title">SeedSigner — 🌽 Corn Screen</h3>
-    <p class="desc">시드사이너 화면에 옥수수 아이콘이 깜빡이는 버전. ‘CORN’ 단체에서 착안.</p>
+    <p class="desc">시드사이너 화면에 옥수수 아이콘이 깜빡이는 버전. ‘CORN GANG’에서 착안.</p>
     <div class="row">
       <span class="tiny"><span class="dot"></span>2025-10-24</span>
-      <a class="tiny inline" 
-         href="https://github.com/gxrxxxng/dalbit.me/commits/main" 
+      <a class="tiny inline"
+         href="https://github.com/gxrxxxng/dalbit.me/commit/e1eba7f"
          target="_blank" rel="noopener">Proof</a>
     </div>
   </div>
 </article>
+
 
 
 
